--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,7 +2,7 @@ version: '3'
 
 # development overrides
 services:
-    bigquery-views:
+    bigquery-views-manager:
         environment:
             GOOGLE_CLOUD_PROJECT: bigquery-views-manager
         volumes:
