--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 COMPOSE_PROJECT_NAME=bigquery-views-manager
 IMAGE_TAG=develop
 
-PYTHON_BASE_IMAGE_TAG=3.6-stretch
+PYTHON_BASE_IMAGE_TAG=3.8-buster
