--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     branches:
       - develop
+env:
+  DATASET_NAME: bigquery_views_manager_ci
 
 jobs:
   build-and-test:
@@ -18,3 +20,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Build Image and Run Tests
         run: make ci-build-and-test DOCKER_COMPOSE_CI='docker compose -f docker-compose.yml -f docker-compose.ci.yml'
+      - name: Clean dataset
+        run: make IMAGE_TAG=${{ github.sha }} REVISION=${{ github.sha }} DATASET_NAME=${{ env.DATASET_NAME }} ci-example-data-clean-dataset
