--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -21,5 +21,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build Image and Run Tests
         run: make ci-build-and-test DOCKER_COMPOSE_CI='${{ env.DOCKER_COMPOSE_CI }}'
+      - name: Setup GCP Secrets
+        run: echo -n '${{ secrets.BIGQUERY_VIEWS_MANAGER_GCP_TEST }}' > ./credentials.json
       - name: Clean dataset
         run: make DOCKER_COMPOSE_CI='${{ env.DOCKER_COMPOSE_CI }}' IMAGE_TAG=${{ github.sha }} REVISION=${{ github.sha }} DATASET_NAME=${{ env.DATASET_NAME }} ci-example-data-clean-dataset
