--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -12,6 +12,7 @@ on:
 env:
   DATASET_NAME: bigquery_views_manager_ci
   DOCKER_COMPOSE_CI: docker compose -f docker-compose.yml -f docker-compose.ci.yml
+  VERSION: develop
 
 jobs:
   build-and-test:
@@ -32,3 +33,5 @@ jobs:
       - name: Clean dataset
         if: ${{ always() }}
         run: make DOCKER_COMPOSE_CI='${{ env.DOCKER_COMPOSE_CI }}' IMAGE_TAG=${{ github.sha }} REVISION=${{ github.sha }} DATASET_NAME=${{ env.DATASET_NAME }} ci-example-data-clean-dataset
+      - name: Push package to test.pypi.org
+        run: make DOCKER_COMPOSE_CI='${{ env.DOCKER_COMPOSE_CI }}' IMAGE_TAG=${{ github.sha }} COMMIT=${{ github.sha }} NO_BUILD=y ci-push-testpypi
