--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -12,7 +12,6 @@ on:
 env:
   DATASET_NAME: bigquery_views_manager_ci
   DOCKER_COMPOSE_CI: docker compose -f docker-compose.yml -f docker-compose.ci.yml
-  VERSION: develop
 
 jobs:
   build-and-test:
@@ -20,6 +19,13 @@ jobs:
     concurrency:
       group: bigquery_views_manager_ci
     steps:
+      - name: Set Version Env Var
+        run: |
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            echo 'VERSION=${GITHUB_REF#refs/tags/v}' >> $GITHUB_ENV
+          else
+            echo 'VERSION=develop' >> $GITHUB_ENV
+          fi
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Setup GCP Secrets
