--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -40,6 +40,7 @@ jobs:
         if: ${{ always() }}
         run: make DOCKER_COMPOSE_CI='${{ env.DOCKER_COMPOSE_CI }}' IMAGE_TAG=${{ github.sha }} REVISION=${{ github.sha }} DATASET_NAME=${{ env.DATASET_NAME }} ci-example-data-clean-dataset
       - name: Push package to test.pypi.org
+        if: ${{ env.VERSION == 'develop' }}
         run: make DOCKER_COMPOSE_CI='${{ env.DOCKER_COMPOSE_CI }}' IMAGE_TAG=${{ github.sha }} COMMIT=${{ github.sha }} NO_BUILD=y ci-push-testpypi
         env:
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_CREDENTIALS }}
